k8s/frontend-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-frontend
  labels:
    app: vitalsync-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitalsync-frontend
  template:
    metadata:
      labels:
        app: vitalsync-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/lajous-harold/vitalsync-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-frontend
spec:
  selector:
    app: vitalsync-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitalsync-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vitalsync.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitalsync-frontend
                port:
                  number: 80
